--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 /Other(ignore)/
 /Plots/
-/Output/
+/Output
 /Output/old/
 /Output/test/
-/Output/new/
 /__pycache__/
 /queue_sim/__pycache__/
 queue_plots.py
